examples/test/testpolicy12088.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12088
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key16: value10
      key37: value2
      key28: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value49
          key41: value5
      podSelector:
        matchLabels:
          key39: value5
          key12: value4
